# scaffoldr

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-use-typer-and-httpx.md  0002-issue-template-resolution.md  0003-branch-protection-defaults.md  0004-ssh-over-https-for-git-remote.md  0005-xdg-config-path.md  0006-user-defined-project-structure-templates.md
scaffoldr/: config.py  exceptions.py  github.py  init.py  issue_handler.py  issues.py  local.py  main.py  new.py  protection.py  template_handler.py  templates.py  user_config.py  utils.py
scaffoldr/config/: __init__.py  init.py  migrate.py  show.py
scaffoldr/issues/: __init__.py  create.py
scaffoldr/template/: __init__.py  list.py
scaffoldr/templates/: default.toml
tests/: conftest.py  test_config.py  test_github.py  test_init.py  test_issue_handler.py  test_issues.py  test_local.py  test_new.py  test_protection.py  test_template_handler.py  test_user_config.py  test_utils.py
tests/config/: test_init.py  test_migrate.py  test_show.py
tests/issues/: test_create.py
tests/template/: test_list.py
