[build-system]
reqires = ["hatchling"]
build-backend = "hatchling-build"

[project]
name = "scaffoldr"
version = "0.1.0"
description = "CLI tool that scaffolds new projects with \
opinionated structure"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0"
]

[project.scripts]
scaffoldr = "scaffoldr.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
