[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scaffoldr"
version = "0.1.0"
description = "CLI tool that scaffolds new projects with opinionated structure"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "platformdirs>=4.0.0"
]

[project.scripts]
scaffoldr = "scaffoldr.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pytest-cov>=5.0.0",
    "tomli-w>=1.2.0"
]

[tool.ruff]
line-length = 64
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
